# vcpkg-cache-server

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
include/vcpkg-cache-server/: database.hpp  functional.hpp  logging.hpp  maintenance.hpp  settings.hpp  site.hpp  store.hpp
include/vcpkg-cache-server/resources/: bootstrap.css.hpp  htmx.js.hpp
src/: database.cpp  functional.cpp  logging.cpp  main.cpp  maintenance.cpp  settings.cpp  site.cpp  store.cpp
tests/: test_database.cpp  test_fmt_formatters.cpp  test_functional.cpp  test_settings.cpp  test_site_enums.cpp  test_yaml_converters.cpp
vcpkg/spdlog/: portfile.cmake
vcpkg/sqlite-orm/: portfile.cmake
